--- a/CustomDataBinding/src/main/res/layout/activity_main.xml
+++ b/CustomDataBinding/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/main_navigation" />
+            android:id="@id/main_navigation" />
 
     </FrameLayout>
 
