--- a/CustomDataBinding/src/main/res/layout/fragment_mine.xml
+++ b/CustomDataBinding/src/main/res/layout/fragment_mine.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:textSize="26sp"
-        android:layout_centerInParent="true"
-        android:text="@string/mine"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/text_login"
+            android:textSize="16sp" />
 
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
