--- a/CustomLiveData/src/main/res/layout/activity_second.xml
+++ b/CustomLiveData/src/main/res/layout/activity_second.xml
@@ -24,4 +24,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_send" />
 
+    <Button
+        android:id="@+id/btn_send3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send3"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_send2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
